@@ -1,3 +1,10 @@
+2009-09-12  Mike Krüger  <mkrueger@novell.com>
+
+	* MonoDevelop.XmlEditor.Gui/BaseXmlEditorExtension.cs:
+	* MonoDevelop.XmlEditor.Completion/XmlTagCompletionData.cs:
+	* MonoDevelop.XmlEditor.Completion/XmlMultipleClosingTagCompletionData.cs:
+	  Track API changes.
+
 2009-09-10  Mike Krüger  <mkrueger@novell.com>
 
 	* MonoDevelop.XmlEditor/XmlFormatter.cs: Track API changes.
